infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: driftwatch-ingress
  namespace: driftwatch
  labels:
    app.kubernetes.io/name: driftwatch-ingress
    app.kubernetes.io/part-of: driftwatch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: driftwatch-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: driftwatch-frontend
                port:
                  number: 80
